Fix prod scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   height: 100%;
 }
 
-.theme-renderer-card {
+.theme-renderer-card.saltCard {
   flex: 1 1 auto;
   overflow-y: auto;
 }
